--- a/index.html
+++ b/index.html
@@ -258,7 +258,26 @@
                                     </select>
                                 </div>
                                 <div class="ms-1">Hz</div>
-
+                                <!-- Second Row -->
+                                <div>
+                                    <input type="checkbox" disabled class="is-connect-enabled"
+                                        id="isPressureSensorEnabled">
+                                </div>
+                                <div class="ms-2"
+                                    style="overflow: hidden; white-space: nowrap; text-overflow: ellipsis;">
+                                    Pressure Sensor, Temperature Sensor (via BLE)
+                                </div>
+                                <div>
+                                    <select disabled
+                                        class="w-100 is-connect-enabled ms-1 sampling-rate-input form-select"
+                                        name="pressureSensorSamplingRate" id="pressureSensorSamplingRate">
+                                        <option value="0">0</option>
+                                        <option value="10">10</option>
+                                        <option value="20">20</option>
+                                        <option value="30">30</option>
+                                    </select>
+                                </div>
+                                <div class="ms-1">Hz</div>
 
                                 <!-- Third Row -->
                                 <div>
